# plantilla-dev

./: .coveragerc  .gitignore  Dockerfile  README.md  catalog-info.yaml  pyproject.toml  script.ps1  sonar-project.properties  template.yaml
src/: main.py
src/api/config/: Containers.py  Environment.py
src/api/end_points/: PostEndPoint.py  PredictionModelEndPoint.py
src/api/exception_handler/: ExceptionHandler.py
src/application/common/exceptions/: BusinessException.py  ExceptionService.py
src/application/common/helpers/: KeyVaultServices.py
src/application/dtos/post/: PostDto.py
src/application/interfaces/: IKeyVaultServices.py  IPostService.py  IPredictionModelService.py
src/application/services/post/: PostService.py
src/application/services/prediction/: PredictionModelService.py
src/infrastructure/interfaces/: IConsumeService.py  IKeyVaultManager.py  IPredictionModel.py
src/infrastructure/services/az_key_vault/: KeyVaultManager.py
src/infrastructure/services/consume_service/: ConsumeService.py
src/infrastructure/services/prediction_model/: PredictionModel.py  modelo_simple.h5
src/mcp/end_points/: IMCMCP.py
tests/application_tests/: test_KeyVaultUnitTest.py  test_PostUnitTest.py  test_PredictionModelUnitTest.py
